@@ -67,16 +67,16 @@ property.duration=Duration
 property.program=Program
 about_dialog.text=<html><head><style>body { color: #000000; }th { text-align: left; }.vm { font-size:8px; margin-left: 10px; margin-top: 6px; } </style></head><body><br><br><table><tr><th>Version:</th><td>%1s</td></tr><tr><th>Website:</th><td>www.jergometer.org</td></tr><tr><th>Authors:</th><td>Stefan Endrullis,</td></tr><tr><th></th><td>Jörg Endrullis</td></tr><tr><th>License:</th><td>GPLv2</td></tr><tr><th>Java Version:</th><td>%2s</td></tr></table> <div class="vm">%3s</div></body></html>
 label.global_settings=Global Settings
-settings.com_port=COM port:
-settings.enter_port_name=Let me enter the port name
-settings.update_ports=Update
-settings.test_port=Test
+settings.serial_port=Serial port:
+settings.enter_port_name=Let me &enter the port name
+settings.update_ports=&Update
+settings.test_port=&Test
 settings.update=Update:
-settings.check_for_updates_on_start=Check for updates on start
-label.save=Save
-label.abort=Abort
+settings.check_for_updates_on_start=&Check for updates on start
+label.save=&Save
+label.abort=&Abort
 settings_dialog.title=JErgometer settings
-msg.configure_comport_first=Please configure the COM port first!
+msg.configure_comport_first=Please configure the serial port first!
 msg.not_implemented_yet=This function is not implemented yet.
 menu.sessions.delete_selected=Delete selected
 menu.sessions.delete_selected_mn=D
@@ -87,14 +87,14 @@ choose_new_program_dialog.explanation=This is normal if you have deleted or rena
 label.assign=Assign
 label.skip=Skip
 choose_new_program_dialog.title=Choose a new program
-msg.connection_failed=Connection to ergometer failed! See console output for additional information.\nTo solve this problem take a look at your COM port configuration (see settings).
+msg.connection_failed=Connection to ergometer failed! See console output for additional information.\nTo solve this problem take a look at your serial port configuration (see settings).
 connection_tester.testing_connection_to_ergometer=Testing connection to ergometer...
 connection_tester.connection_successful=Connection to ergoemter was successful! (ID=%s)
 connection_tester.open_connection=Opening connection
 connection_tester.send_reset=Sending reset command
 connection_tester.wait_for_reset_finished=Waiting for reset finished
 connection_tester.retrieving_ergometer_id=Retrieving ergometer id
-msg.com_port_used_by_the_following_application=COM port is currently owned by application "%s"!
+msg.serial_port_used_by_the_following_application=Serial port is currently owned by application "%s"!
 msg.unsatisfied_link_error=JErgometer could not load the serial port library for your operating system.\nPlease file a bug report on jergometer.org and include the console output and the info which OS you are using. Thanks.
 error_dialog.title=Error!
 menu.programs.edit=Edit
@@ -122,7 +122,7 @@ menu.programs.update_mn=U
 menu.programs.update_ks=F5
 main_window.title=JErgometer %s
 label.xml_editor=XML editor:
-label.file_choosing=>>>
+label.file_choosing=&>>>
 msg.error_during_execution_of=Error during execution of "%s"!
 msg.could_not_open_xml_editor=Could not open XML editor
 msg.really_delete_selected_program=Are you sure you want to delete the selected program?
