@@ -88,16 +88,16 @@ about_dialog.text=\
     </body>\
   </html>
 label.global_settings=Globale Einstellungen
-settings.com_port=COM-Port:
-settings.enter_port_name=Lass mich den Namen eingeben
-settings.update_ports=Aktualisieren
-settings.test_port=Testen
+settings.serial_port=Serial-Port:
+settings.enter_port_name=Lass mich den Namen &eingeben
+settings.update_ports=Akt&ualisieren
+settings.test_port=&Testen
 settings.update=Update:
-settings.check_for_updates_on_start=Suche nach neuen Versionen beim Start
-label.save=Speichern
-label.abort=Abbrechen
+settings.check_for_updates_on_start=Suche beim Start nach neuen &Versionen von JErgometer
+label.save=&Speichern
+label.abort=&Abbrechen
 settings_dialog.title=JErgometer-Einstellungen
-msg.configure_comport_first=Bitte geben Sie zunächst den COM-Port zur Datenübertragung an!
+msg.configure_comport_first=Bitte konfigurieren Sie zunächst den seriellen Port für die Kommunikation mit dem Ergometer!
 msg.not_implemented_yet=Diese Funktion ist noch nicht implementiert.
 menu.sessions.delete_selected=Lösche selektierte
 menu.sessions.delete_selected_mn=D
@@ -108,14 +108,14 @@ label.assign=Zuweisen
 label.skip=Überspringen
 choose_new_program_dialog.explanation=Dies könnte durch die Löschung oder Umbenennung von Trainingsprogrammen entstanden sein. Falls es sich nur um eine Umbenennung handelt, können Sie den betroffenen Sitzungen nun das zugehörige Programm zuweisen.
 choose_new_program_dialog.title=Neues Programm auswählen
-msg.connection_failed=Verbindung zum Ergometer fehlgeschlagen! Weitere Informationen finden Sie im Konsolenfenster.\nUm das Problem zu beheben, sollten Sie Ihre COM-Port-Konfiguration (siehe Einstellungen) überprüfen.
+msg.connection_failed=Verbindung zum Ergometer fehlgeschlagen! Weitere Informationen finden Sie im Konsolenfenster.\nUm das Problem zu beheben, sollten Sie Ihre Serial-Port-Konfiguration (siehe Einstellungen) überprüfen.
 connection_tester.testing_connection_to_ergometer=Teste Verbindung zum Ergometer...
 connection_tester.connection_successful=Verbindung zum Ergometer war erfolgreich! (ID=%s)
 connection_tester.open_connection=Baue Verbindung auf
 connection_tester.send_reset=Sende Reset-Kommando
 connection_tester.wait_for_reset_finished=Warte auf Reset-Ende
 connection_tester.retrieving_ergometer_id=Hole Ergometer-ID
-msg.com_port_used_by_the_following_application=Der COM-Port wird derzeit von der Anwendung "%s" genutzt!
+msg.serial_port_used_by_the_following_application=Der serielle Port wird derzeit von der Anwendung "%s" genutzt!
 msg.unsatisfied_link_error=JErgometer konnte leider nicht die Serial-Port-Bibliothek für Ihr Betriebssystem laden.\nBitte melden Sie das Problem dem Entwickler, indem Sie ihm eine Mail schreiben oder auf jergometer.org ein einen Fehlerbericht (neues Ticket) verfassen.\nVergessen Sie dabei bitte nicht, Ihr Betriebsystem und die Fehlerausschriften im Konsolenfenster anzugeben. Danke.
 error_dialog.title=Fehler!
 menu.programs.edit=Editieren
@@ -143,7 +143,7 @@ menu.programs.update_mn=u
 menu.programs.update_ks=F5
 main_window.title=JErgometer %s
 label.xml_editor=XML-Editor:
-label.file_choosing=>>>
+label.file_choosing=&>>>
 msg.error_during_execution_of=Fehler während der Ausführung von "%s"!
 msg.could_not_open_xml_editor=XML-Editor konnte nicht geöffnet werden
 msg.really_delete_selected_program=Sind Sie sicher, dass Sie das selektierte Programm läschen möchten?
